# cr-agent

./: .env.example  .gitignore  README.md  Untitled.ipynb  agent.py  context7.py  main.py  pyproject.toml  shell_tools.py
.baidu-cc/: meta.json
coding-standards/: README.md  registry.yaml
coding-standards/rules/go/: GO-STYLE-001.md
cr_agent/: __init__.py  config.py  file_review.py  models.py  profile.py  rate_limiter.py  reporting.py
cr_agent/agents/: __init__.py  base.py  react.py
cr_agent/rules/: __init__.py  loader.py
cr_reports/: cr-report-20251219-132805-6b1dbe3.md
docs/: eval.md  product.md  rules.md  usage.md
eval/cases/GO-STYLE-001/missing_export_comment/: expect.yaml  patch.diff
profiles/: default.yaml  eval.yaml
results/: eval.ndjson
tools/: eval_rules.py  git_tools.py  list_rules.py  shell_tools.py  standard_tools.py
